Change the index page's backgound image.

--- a/polls/static/polls/style.css
+++ b/polls/static/polls/style.css
@@ -3,5 +3,5 @@ li a {
 }
 
 body {
-    background: black url("images/background.gif") right top no-repeat;
+    background: black url("images/background.jpg") right top no-repeat;
 }
